# tree-sitter-slisp

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-slisp.pc.in
bindings/c/tree_sitter/: tree-sitter-slisp.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_slisp/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSLispTests/: TreeSitterSLispTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
