[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-slisp"
description = "SlightLisp Language Grammar"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "slisp"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Xavier R. Guerin" }]
requires-python = ">=3.10"
license.text = "ISC"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-slisp"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
